# 3D-Visualizer

./: CMakeLists.txt  CMakePresets.json  ParametricCAD.cpp  ParametricCAD.h  README.md
src/: GeometryEngine.cpp  GeometryEngine.h  Viewer.cpp  Viewer.h  main.cpp
